--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nick's Sample Biz Site</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Nick's Web Design Co.</h1>
+    <p>Simple, clean websites for small businesses</p>
+  </header>
+  <section>
+    <h2>Welcome to Your New Website!</h2>
+    <p>This is a demo of what your site could look like.</p>
+    <p>We build fast, modern websites to help your business grow online.</p>
+  </section>
+  <footer>
+    <p>&copy; 2025 Nick's Web Design Co.</p>
+  </footer>
+</body>
+</html>
