--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Our Menu | Riviera Maya</title>
+  <style>
+    body {
+      background-color: #fff8f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(45deg, #d72638, #f46036);
+      padding: 1.5rem;
+      color: white;
+      text-align: center;
+      background-image: url('https://www.transparenttextures.com/patterns/mexican-skull.png');
+    }
+    nav {
+      background: #f6aa1c;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      margin: 0 1rem;
+    }
+    .menu-section {
+      padding: 2rem;
+    }
+    h2 {
+      text-align: center;
+      color: #d72638;
+      margin-bottom: 1rem;
+    }
+    .menu-item {
+      background: #fff;
+      padding: 1rem;
+      border-radius: 10px;
+      margin: 1rem auto;
+      max-width: 600px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .menu-item h3 {
+      margin-top: 0;
+      color: #f46036;
+    }
+    .menu-item p {
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Riviera Maya Menu</h1>
+    <p>Explore our authentic Mexican dishes</p>
+  </header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="menu.html">Menu</a>
+    <a href="index.html#visit">Visit</a>
+    <a href="index.html#contact">Contact</a>
+  </nav>
+
+  <div class="menu-section">
+    <h2>Appetizers</h2>
+    <div class="menu-item">
+      <h3>Chips & Guac - $6.99</h3>
+      <p>Freshly made guacamole served with crispy tortilla chips.</p>
+    </div>
+    <div class="menu-item">
+      <h3>Queso Fundido - $7.99</h3>
+      <p>Melted cheese blend with chorizo and tortillas.</p>
+    </div>
+
+    <h2>Entrees</h2>
+    <div class="menu-item">
+      <h3>Carne Asada Plate - $15.99</h3>
+      <p>Grilled steak with rice, beans, guacamole, and tortillas.</p>
+    </div>
+    <div class="menu-item">
+      <h3>Chicken Enchiladas - $13.99</h3>
+      <p>Three enchiladas topped with our homemade red sauce and cheese.</p>
+    </div>
+
+    <h2>Drinks</h2>
+    <div class="menu-item">
+      <h3>Horchata - $3.50</h3>
+      <p>Sweet cinnamon rice milk served cold.</p>
+    </div>
+    <div class="menu-item">
+      <h3>Jarritos - $2.99</h3>
+      <p>Mexican soda available in Tamarindo, Lime, and Pineapple.</p>
+    </div>
+  </div>
+</body>
+</html>
 
