--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
       text-align: center;
       color: white;
       font-family: 'Brush Script MT', cursive;
-      background-image: url('https://www.transparenttextures.com/patterns/mexican-skull.png');
-      background-size: cover;
-      background-position: center;
     }
     nav {
       background: #f6aa1c;
@@ -60,11 +57,28 @@
     .hero button:hover {
       background-color: #f46036;
     }
+    section {
+      padding: 2rem;
+    }
+    .visit-contact-section {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+    }
+    .map {
+      width: 45%;
+    }
+    .contact-form {
+      width: 45%;
+    }
     footer {
       background: #f46036;
       color: white;
       text-align: center;
       padding: 1rem;
+    }
+    footer .contact-info {
+      margin-top: 1rem;
     }
   </style>
 </head>
@@ -76,7 +90,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
-    <a href="about.html">About Us</a>
+    <a href="about-us.html">About Us</a>
   </nav>
 
   <section class="hero">
@@ -107,6 +121,10 @@
 
   <footer>
     <p>&copy; 2025 Riviera Maya Mexican Restaurant • Latino-owned</p>
+    <div class="contact-info">
+      <p>Phone: (702) 555-1234</p>
+      <p>Email: info@rivieramaya.com</p>
+    </div>
   </footer>
 </body>
 </html>
