--- a/menu.html
+++ b/menu.html
@@ -69,7 +69,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
-    <a href="about.html">About Us</a>
+    <a href="about-us.html">About Us</a>
   </nav>
 
   <section class="menu-section">
