--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
 
-  <!-- Header Section -->
+  <!-- Fixed Header Section -->
   <header>
     <h1>Riviera Maya Mexican Restaurant</h1>
     <p>Authentic Flavors from the Heart of Mexico</p>
     <nav>
       <a href="#menu">Menu</a>
-      <a href="#about-us">About Us</a>
+      <a href="#home">Home</a>
     </nav>
   </header>
 
   <!-- Main Content Section -->
   <main>
-    <!-- About Us Section -->
+    <!-- About Us Section within Yellow Area -->
     <section id="about-us" class="about-us">
       <h2>About Us</h2>
-      <p>At Riviera Maya, we bring the vibrant and authentic flavors of Mexico right to your table. With years of tradition in every dish, our mission is to deliver an unforgettable dining experience.</p>
+      <p>At Riviera Maya, we bring the vibrant and authentic flavors of Mexico right to your table. With years of tradition in every dish, our mission is to deliver an unforgettable dining experience. We pride ourselves on using fresh, locally sourced ingredients, and every meal is made with love and passion for Mexican cuisine. Come visit us and taste the difference!</p>
     </section>
 
     <!-- Visit Us & Contact Section -->
@@ -31,57 +31,4 @@
       <div class="map">
         <h2>Visit Us</h2>
         <p>2861 N Green Valley Pkwy, Henderson, NV 89014</p>
-        <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed" width="100%" height="300" style="border:0;"></iframe>
-      </div>
-
-      <div class="business-hours">
-        <h3>Business Hours</h3>
-        <div class="hours">
-          <!-- Hours formatted nicely -->
-          <div class="day">
-            <span class="day-name">Wednesday</span><span class="time">2:00 PM - 9:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Thursday</span><span class="time">2:00 PM - 9:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Friday</span><span class="time">2:00 PM - 10:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Saturday</span><span class="time">12:00 PM - 10:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Sunday</span><span class="time">12:00 PM - 9:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Monday</span><span class="time">2:00 PM - 9:00 PM</span>
-          </div>
-          <div class="day">
-            <span class="day-name">Tuesday</span><span class="time">2:00 PM - 9:00 PM</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Contact Form Section -->
-      <div class="contact-form">
-        <h2>Get in Touch</h2>
-        <p>Have a question or comment? Reach out and we'll get back to you soon!</p>
-        <form id="contact-form" onsubmit="sendEmail(event)">
-          <input type="text" id="name" placeholder="Your Name" required>
-          <input type="email" id="email" placeholder="Your Email" required>
-          <input type="tel" id="phone" placeholder="Your Phone Number (Optional)">
-          <textarea id="message" placeholder="Your Message" required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Riviera Maya Mexican Restaurant</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
+        <iframe src="https://www.google.com/maps?q=
