--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Riviera Maya Mexican Restaurant</h1>
     <p>Authentic Flavors from the Heart of Mexico</p>
     <nav>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="menu.html">Menu</a>
     </nav>
   </header>
