--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       text-align: center;
       color: white;
       font-family: 'Brush Script MT', cursive;
+      width: 100%;
+      box-sizing: border-box;
     }
     nav {
       background: #f1faee;
@@ -35,6 +37,7 @@
       padding: 3rem;
       max-width: 1200px;
       margin: 0 auto;
+      width: 90%; /* Adjusting width to make it more compact */
     }
     .highlight {
       background: #fffdde;
@@ -57,6 +60,9 @@
       padding: 2rem;
       border-radius: 15px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 900px; /* Limiting max-width for better presentation */
+      margin: 0 auto; /* Centering */
     }
     .find-us-left, .find-us-right {
       background: #fff;
@@ -88,6 +94,8 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       margin-top: 2rem;
+      max-width: 600px; /* Limiting width */
+      margin: 0 auto; /* Centering */
     }
     .contact-us form input, .contact-us form textarea {
       width: 100%;
@@ -104,6 +112,7 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
+      width: 100%;
     }
     footer {
       background: #f1faee;
