--- a/menu.html
+++ b/menu.html
@@ -1,42 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menu | Riviera Maya Mexican Restaurant</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Menu - Riviera Maya Mexican Restaurant</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(45deg, #e63946, #f1faee);
+      padding: 2rem;
+      text-align: center;
+      color: white;
+      font-family: 'Brush Script MT', cursive;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    nav {
+      background: #f1faee;
+      display: flex;
+      justify-content: center;
+      padding: 1rem;
+    }
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem 0;
+      max-width: 1200px;
+      margin: 0 auto;
+      width: 90%; /* Adjusting width to make it more compact */
+      background-color: #fff; /* Solid white background for sections */
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for modern look */
+    }
+    .highlight {
+      background: #fffdde;
+      border-left: 5px solid #e63946;
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    .menu-item {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+    }
+    .menu-item:last-child {
+      border-bottom: none;
+    }
+    .menu-item h4 {
+      font-weight: bold;
+      color: #e63946;
+    }
+    footer {
+      background: #f1faee;
+      color: #333;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Header Section -->
   <header>
     <h1>Riviera Maya Mexican Restaurant</h1>
     <p>Authentic Flavors from the Heart of Mexico</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="menu.html">Menu</a>
-    </nav>
   </header>
+  
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="menu.html">Menu</a>
+  </nav>
 
-  <!-- Main Content Section -->
-  <main>
-    <section id="menu">
-      <h2>Our Menu</h2>
-      <ul>
-        <li><strong>Tacos</strong> - Soft corn tortillas with your choice of meat and toppings.</li>
-        <li><strong>Quesadillas</strong> - Grilled flour tortillas stuffed with cheese and your choice of meat.</li>
-        <li><strong>Enchiladas</strong> - Rolled corn tortillas filled with your choice of meat, covered in red sauce and cheese.</li>
-        <li><strong>Fajitas</strong> - Grilled vegetables and your choice of meat served sizzling with tortillas.</li>
-        <li><strong>Guacamole</strong> - Freshly made avocado dip with lime and spices.</li>
-        <li><strong>Churros</strong> - Fried dough dusted with cinnamon and sugar, served with chocolate sauce.</li>
-      </ul>
-    </section>
-  </main>
+  <!-- Menu Section -->
+  <section id="menu">
+    <h2>Our Menu</h2>
+    <div class="menu-item">
+      <h4>Tacos al Pastor</h4>
+      <p>$12.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Carne Asada Burrito</h4>
+      <p>$10.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Enchiladas Verdes</h4>
+      <p>$13.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Chiles Rellenos</h4>
+      <p>$14.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Quesadilla Supreme</h4>
+      <p>$9.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Elote (Mexican Street Corn)</h4>
+      <p>$4.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Sopa de Lima (Lime Soup)</h4>
+      <p>$8.99</p>
+    </div>
+    <div class="menu-item">
+      <h4>Guacamole & Chips</h4>
+      <p>$5.99</p>
+    </div>
+  </section>
 
-  <!-- Footer Section -->
   <footer>
     <p>&copy; 2025 Riviera Maya Mexican Restaurant</p>
   </footer>
-
 </body>
 </html>
