--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Riviera Maya Mexican Restaurant</title>
+  <title>Home - Riviera Maya Mexican Restaurant</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,9 +13,10 @@
       padding: 0;
       font-family: 'Inter', sans-serif;
       background-color: #fffae6; /* Warm yellow background */
+      color: #7c3e00; /* Dark rustic orange text */
     }
     header {
-      background-color: #7c3e00; /* Warm rustic orange for header */
+      background-color: #7c3e00; /* Rustic orange header */
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -23,7 +26,6 @@
       font-size: 3rem;
     }
     section {
-      min-height: 100vh;
       padding: 80px 10%;
       display: flex;
       flex-direction: column;
@@ -37,13 +39,9 @@
     p {
       font-size: 1.1rem;
       line-height: 1.6;
-      color: #7c3e00; /* Matching color */
-    }
-    .theme {
-      border-bottom: 2px solid #ddd;
     }
     .button {
-      background-color: #ff9f00; /* Button color for "Warm Fiesta" */
+      background-color: #ff9f00; /* Button color to match the theme */
       padding: 10px 20px;
       color: white;
       text-decoration: none;
