--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu - Riviera Maya Mexican Restaurant</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,9 +13,10 @@
       padding: 0;
       font-family: 'Inter', sans-serif;
       background-color: #fffae6; /* Warm yellow background */
+      color: #7c3e00; /* Dark rustic orange text */
     }
     header {
-      background-color: #7c3e00; /* Warm rustic orange for header */
+      background-color: #7c3e00; /* Rustic orange header */
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -23,7 +26,6 @@
       font-size: 3rem;
     }
     section {
-      min-height: 100vh;
       padding: 80px 10%;
       display: flex;
       flex-direction: column;
@@ -37,13 +39,9 @@
     p {
       font-size: 1.1rem;
       line-height: 1.6;
-      color: #7c3e00; /* Matching color */
-    }
-    .theme {
-      border-bottom: 2px solid #ddd;
     }
     .button {
-      background-color: #ff9f00; /* Button color for "Warm Fiesta" */
+      background-color: #ff9f00; /* Button color to match the theme */
       padding: 10px 20px;
       color: white;
       text-decoration: none;
@@ -54,18 +52,30 @@
 </head>
 <body>
   <header>
-    <h1>Riviera Maya Mexican Restaurant</h1>
-    <p>Authentic Flavors from the Heart of Mexico</p>
+    <h1>Our Menu</h1>
+    <p>Delicious and Authentic Mexican Dishes</p>
   </header>
 
   <section>
-    <h2>Our Menu</h2>
-    <p>Explore our menu and discover the delicious, authentic Mexican dishes we serve. Whether you're craving tacos, burritos, or something more adventurous, we’ve got it all!</p>
-    <!-- Add your actual menu items below, here’s a sample -->
+    <h2>Our Specialties</h2>
+    <p>From tacos to enchiladas, and everything in between, our menu brings the heart of Mexico to your plate.</p>
+  </section>
+
+  <section>
+    <h2>Appetizers</h2>
     <ul>
-      <li>Tacos (Carne Asada, Al Pastor, Pollo)</li>
-      <li>Burritos (Beef, Chicken, Veggie)</li>
-      <li>Enchiladas (Cheese, Chicken, Beef)</li>
+      <li>Guacamole & Chips</li>
+      <li>Nachos Supreme</li>
+      <li>Queso Fundido</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Main Courses</h2>
+    <ul>
+      <li>Carne Asada</li>
+      <li>Chicken Mole</li>
+      <li>Fish Tacos</li>
     </ul>
   </section>
 
